feat: atualiza dependências e implementa ações de curtir para candidatos e empresas. implementa testes das respectivas classes.